# Tetrahedron

./: .gitignore  CMakeLists.txt  Main.cpp  Pyraminx_state.cpp  Renderer.cpp  _struct_example.py  _structure_cols.py  copy_dlls.ps1  math3.h  pyraminx_state.h  readme.md  renderer.h  tetrahedron.cpp  tetrahedron.h  tetrahedron_mesh.cpp  tetrahedron_mesh.h  turn_geometry.cpp  turn_geometry.h  window_shape.cpp  window_shape.h
